# querypie-cli

./: .gitignore  Cargo.toml  README.md  build.rs  dist-workspace.toml  tauri.conf.json
.github/: build-setup.yml
.github/workflows/: ci.yml  publish-crate.yml  release.yml
docs/assets/: querypie-cli-demo.avif  querypie-cli-demo.webm
proto/: querypie.proto
scripts/: install.ps1  install.sh
skills/querypie/: SKILL.md
skills/querypie-cli/: SKILL.md
src/: lib.rs  lockfile.rs  main.rs  paths.rs
src/auth/: error.rs  mod.rs  service.rs  status.rs  webview.rs
src/auth/webview/: cookies.rs
src/cli/: auth_cmd.rs  commands.rs  completion.rs  data_cmd.rs  mod.rs  session.rs  session_cmd.rs
src/config/: mod.rs
src/formatting/: mod.rs  style.rs  table.rs
src/qpapi/: catalog.rs  grpcweb.rs  mod.rs  session.rs  sql.rs
src/sessioncache/: mod.rs
