[package]
name = "querypie"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
prost-build = "0.13"
protoc-bin-vendored = "3"

[features]
default = []

[dependencies]
anyhow = "1"
anstyle = "1"
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "5"
prost = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "cookies", "json", "rustls-tls"] }
rmpv = { version = "1", features = ["with-serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
terminal_size = "0.4"
unicode-width = "0.2"
uuid = { version = "1", features = ["v4"] }

[[bin]]
name = "querypie"
path = "src/main.rs"
