[package]
name = "querypie"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
prost-build = "0.13"
protoc-bin-vendored = "3"
tauri-build = { version = "2", features = ["codegen"] }

[dependencies]
anyhow = "1"
anstream = "0.6"
anstyle = "1"
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "5"
hex = "0.4"
prost = "0.13"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "cookies", "json", "rustls-tls"] }
rmpv = { version = "1", features = ["with-serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tauri = { version = "2", default-features = false, features = ["wry"] }
thiserror = "1"
terminal_size = "0.4"
time = { version = "0.3", features = ["formatting"] }
unicode-width = "0.2"
url = "2"
uuid = { version = "1", features = ["v4"] }

[features]
default = []

[[bin]]
name = "querypie"
path = "src/main.rs"
