[package]
name = "querypie-cli"
version = "0.2.0"
edition = "2021"
description = "Query QueryPie databases from the terminal with webview authentication."
build = "build.rs"
repository = "https://github.com/sudosubin/querypie-cli"
license = "MIT"

[build-dependencies]
prost-build = "0.13"
protoc-bin-vendored = "3"
tauri-build = { version = "2", features = ["codegen"] }

[dependencies]
anyhow = "1"
anstream = "1"
anstyle = "1"
base64 = "0.22"
clap = { version = "4.6", features = ["derive"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
dirs = "6"
prost = "0.13"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls"] }
rmpv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", default-features = false, features = ["wry"] }
thiserror = "2"
terminal_size = "0.4"
unicode-width = "0.2"
url = "2"
uuid = { version = "1", features = ["v4"] }

[features]
default = []

[[bin]]
name = "querypie"
path = "src/main.rs"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.dist]
inherits = "release"
lto = true
